Fix the `overflow` of the `<article>` tag

--- a/src/mc2it_theme/ui/app/layout.css
+++ b/src/mc2it_theme/ui/app/layout.css
@@ -25,7 +25,7 @@ main {
 article {
 	background-color: var(--bs-body-bg);
 	box-shadow: var(--bs-box-shadow-sm);
-	overflow: clip;
+	overflow: hidden;
 	width: 100%;
 
 	@media screen and (width >= 1200px) {
